--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -194,3 +194,19 @@ check-list input[type="checkbox"]:checked::after {
 .about-text{
   max-width: 50%;
 }
+
+@media only screen and (max-width: 600px){
+  .header-container {
+    flex-direction: column;
+  }
+  .carrousel {
+    max-width: 100%;
+    padding: .3em .8em .3em .8em;
+    transition: transform 2s cubic-bezier(0.075, 0.85, 0.175, 1) 5ms,
+      opacity 2s 3ms;
+  }
+  .about-text{
+    max-width: 100%;
+  }
+
+}
