--- a/stylesheets/root.css
+++ b/stylesheets/root.css
@@ -1,7 +1,4 @@
 :root {
-  --font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
-
   --color-base-green: 158, 79%;
   --color-base-white: 0, 0%;
   --color-base-gray: 250, 14%;
@@ -20,6 +17,9 @@
 
   --color-text-primary: #212121;
   --color-text-secondary: #757575;
+
+  --md-text-font: "TahomaRegular"; 
+
 }
 
 [data-md-color-scheme="slate"] {
