--- a/docs/stylesheets/home.css
+++ b/docs/stylesheets/home.css
@@ -10,6 +10,14 @@
     opacity 2s 3ms;
 }
 
+.carrousel_items {
+  max-width: 100%;
+  padding: 1em 2em 1em 2em;
+  transition: transform 2s cubic-bezier(0.075, 0.85, 0.175, 1) 5ms,
+    opacity 2s 3ms;
+}
+
+
 .mySlides > img {
   border-radius: 1em;
 }
