--- a/docs/stylesheets/home.css
+++ b/docs/stylesheets/home.css
@@ -52,17 +52,6 @@
   transition: background-position 0.7s, background-size 0.5s ease-in-out;
 }
 
-.highlight-box {
-  position: relative;
-  padding: 2rem 8rem 2rem 2rem;
-  border: 1px solid var(--theme-shade-subtle);
-  box-shadow: -0.5rem 0.5rem 0 -1px var(--theme-bg),
-    -0.5rem 0.5rem var(--theme-shade-subtle), -1rem 1rem 0 -1px var(--theme-bg),
-    -1rem 1rem var(--theme-shade-subtle), 0 0 3em #fff3, 0 0 1em -0.75em #f0f,
-    0 0 0.5em -0.25em #f0f;
-  background-color: var(--theme-bg);
-}
-
 h2 {
   font-size: 1.875rem;
   line-height: 1.3;
@@ -77,46 +66,48 @@ h2 {
   line-height: 1.65;
 }
 
-check-list label {
+.ul-checklist li {
+  color:#fff;
+  list-style:none;
+  display: flex;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+}
+
+.ul-checklist li:before {
+  font-family:FontAwesome;
+  color:#fff;
+  font-size:18px;
+  content:"\f10c";
+}
+
+.ul-checklist li:hover:before {
+  color:var(--color-yellow);
+}
+
+.checklist span {
   font-size: 1.5em;
   display: block;
   position: relative;
-  margin: 0 -1rem;
   border-radius: 0.5rem;
   padding: 0.5rem 0.5rem 0.5rem 4rem;
   cursor: pointer;
   color: var(--color-text-secondary);
 }
 
-check-list input[type="checkbox"] {
-  -webkit-appearance: none;
-  appearance: none;
+svg{
+  width:30px;
+  height:30px;
+  color:#fff;
+  padding:1px 2px;
+  transition:0.4s ease all;
+  cursor:pointer;
 }
 
-check-list input[type="checkbox"]::after {
-  content: "\2714\fe0e";
-  position: absolute;
-  top: 1em;
-  left: 1em;
-  transform: translateY(-50%) translate(0.1875rem, -0.1875rem);
-  transform-origin: center;
-  text-align: center;
-  line-height: 2;
-  width: 2em;
-  height: 2em;
-  font-size: 1rem;
-  border: 0.0625rem solid var(--theme-shade-subtle);
-  border-radius: 0.5rem;
-  color: var(--color-text-secondary);
-  box-shadow: -0.1875rem 0.1875rem var(--color-text-secondary);
-  cursor: pointer;
-}
-
-check-list input[type="checkbox"]:checked::after {
-  color: hsl(var(--color-base-white), 100%);
-  background-color: var(--color-yellow);
-  box-shadow: -0.0625rem 0.0625rem var(--theme-shade-subtle);
-  transform: translateY(-50%) translate(0.0625rem, -0.0625rem);
+svg:hover{
+  transform:translateX(10px); 
+  color: var(--color-yellow);
 }
 
 
