--- a/docs/stylesheets/home.css
+++ b/docs/stylesheets/home.css
@@ -91,7 +91,7 @@ h2 {
   display: block;
   position: relative;
   border-radius: 0.5rem;
-  padding: 0.2rem 0.5rem;
+  padding: 0.1rem 0.5rem;
   cursor: pointer;
   color: var(--color-text-secondary);
 }
@@ -174,6 +174,7 @@ svg:hover{
   width: 100%;
   justify-content: center;
   margin: 0em;
+  padding: 15px;
 }
 
 .about-container{
