--- a/docs/stylesheets/home.css
+++ b/docs/stylesheets/home.css
@@ -23,7 +23,7 @@
 }
 
 .title-container > h1 {
-  font-size: 3em;
+  font-size: 2.6em;
   font-weight: 600;
   padding: 0;
   margin: 0;
@@ -52,10 +52,12 @@
   transition: background-position 0.7s, background-size 0.5s ease-in-out;
 }
 
-h2 {
-  font-size: 1.875rem;
+.title-container > h2 {
+  font-size: 1.2em;
   line-height: 1.3;
   margin: 0;
+  color: var(--color-yellow);
+  font-weight: bold;
 }
 
 .checklist> ul {
