--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -52,7 +52,7 @@
   transition: background-position 0.7s, background-size 0.5s ease-in-out;
 }
 
-.title-container > h2 {
+.title-container > a >  h2 {
   font-size: 1.2em;
   line-height: 1.3;
   margin: 0;
