--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -22,6 +22,10 @@
   border-radius: 1em;
 }
 
+.title-container {
+  max-width: 40%;
+}
+
 .title-container > h1 {
   font-size: 2.6em;
   font-weight: 600;
