--- a/docs/stylesheets/home.css
+++ b/docs/stylesheets/home.css
@@ -206,8 +206,12 @@ svg:hover{
     transition: transform 2s cubic-bezier(0.075, 0.85, 0.175, 1) 5ms,
       opacity 2s 3ms;
   }
-  .about-text{
+  .title-container{
     max-width: 100%;
+    margin: 10px;
+  }
+  .title-container > h1{
+    text-align: center;
   }
 
 }
